Fix visibility of accordion items
Tailwind's .collapse was applied even to elements with .show

--- a/assets/css/kgs_shrinked.css
+++ b/assets/css/kgs_shrinked.css
@@ -410,6 +410,10 @@ code {
   max-height: calc(100vh - 2 * var(--bs-navbar-padding-y) - 2 * var(--bs-navbar-brand-padding-y) - var(--bs-navbar-brand-font-size));
 }
 
+.accordion-item .show {
+  visibility: visible !important;
+}
+
 /* -------end customization-------- */
 /* finally, import Bootstrap to set the changes! */
 /*!
@@ -2909,11 +2913,6 @@ iframe {
 .mx-2 {
   margin-right: 0.5rem !important;
   margin-left: 0.5rem !important;
-}
-
-.mx-3 {
-  margin-right: 1rem !important;
-  margin-left: 1rem !important;
 }
 
 .mx-4 {
